[package]
name = "firetrack"
version = "0.1.0"
authors = ["Pieter Frenssen <pieter@frenssen.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "~1.0"
actix-files = "~0.1"
env_logger = "~0.6"
log = "~0.4"
tera = "~0.11"
