[package]
name = "firetrack"
version = "0.1.0-dev"
authors = ["Pieter Frenssen <pieter@frenssen.be>"]
edition = "2018"

[dependencies]
actix-files = "~0.1"
actix-http = "~0.2"
actix-web = "^1.0.7"
bytes = "~0.4"
dotenv = "^0.14"
env_logger = "~0.6"
libxml = "~0.2"
log = "~0.4"
regex = "~1.3"
serde = "~1.0"
serde_derive = "~1.0"
tera = "~0.11"
