[package]
name = "cli"
version = "0.1.0-dev"
authors = ["Pieter Frenssen <pieter@frenssen.be>"]
edition = "2018"

[dependencies]
actix-files = "~0.1"
actix-http = "~0.2"
actix-web = "^1.0.9"
app = { path = "../app" }
clap = "~2.33"
db = { path = "../db" }
libxml = "~0.2"
log = "~0.4"
regex = "~1.3"
serde = "~1.0"
serde_derive = "~1.0"
tera = "~0.11"
validator = "~0.10"
web = { path = "../web" }
