[package]
name = "cli"
version = "0.1.0-dev"
authors = ["Pieter Frenssen <pieter@frenssen.be>"]
edition = "2018"

[dependencies]
actix-files = "~0.2"
actix-http = "^1.0.1"
actix-rt = "~1.0"
actix-web = "~2.0"
app = { path = "../app" }
clap = "~2.33"
db = { path = "../db" }
libxml = "~0.2"
log = "~0.4"
notifications = { path = "../notifications" }
regex = "~1.3"
serde = "~1.0"
serde_derive = "~1.0"
tera = "~1.2"
validator = "~0.10"
web = { path = "../web" }
