[package]
name = "cli"
version = "0.1.0-dev"
authors = ["Pieter Frenssen <pieter@frenssen.be>"]
edition = "2018"

[dependencies]
actix-files = "~0.2"
actix-http = "^1.0.1"
actix-rt = "~1.0"
actix-web = "~2.0"
app = { path = "../app" }
chrono = "~0.4"
clap = "~2.33"
db = { path = "../db" }
log = "~0.4"
mailgun_mock = { path = "../mailgun_mock" }
notifications = { path = "../notifications" }
regex = "~1.4"
rust_decimal = "~1.10"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "^1.0.89"
tera = "~1.6"
validator = "~0.12"
web = { path = "../web" }
