[package]
name = "db"
version = "0.1.0-dev"
authors = ["Pieter Frenssen <pieter@frenssen.be>"]
edition = "2018"

[dependencies]
app = { path = "../app" }
argonautica = "~0.2"
chrono = { version = "~0.4", features = ['serde'] }
diesel = { version = "~2.0", features = ['chrono', 'postgres', 'r2d2'] }
log = "~0.4"
r2d2 = "~0.8"
rand = "~0.7"
rust_decimal = { version = "~1.10", features = ['diesel'] }
serde = "~1.0"
serde_json = "~1.0"
validator = "~0.12"

[dev-dependencies]
dotenv = "~0.15"
testing_logger = "^0.1.1"
