[package]
name = "web"
version = "0.1.0-dev"
authors = ["Pieter Frenssen <pieter@frenssen.be>"]
edition = "2018"

[dependencies]
actix-files = "~0.2"
actix-http = "^1.0.1"
actix-identity = "~0.2"
actix-session = "~0.3"
actix-web = "~2.0"
app = { path = "../app" }
db = { path = "../db" }
diesel = { version = "~1.4", features = ['chrono', 'postgres', 'r2d2'] }
dotenv = "~0.15"
libxml = "~0.2"
log = "~0.4"
notifications = { path = "../notifications" }
r2d2 = "~0.8"
regex = "~1.3"
serde = "~1.0"
serde_derive = "~1.0"
tera = "~1.2"
validator = "~0.10"

[dev-dependencies]
actix-rt = "~1.0"
chrono = "~0.4"
mockito = "^0.25.1"
serde_json = "^1.0.51"
