[package]
name = "web"
version = "0.1.0-dev"
authors = ["Pieter Frenssen <pieter@frenssen.be>"]
edition = "2018"

[dependencies]
actix-files = "~0.2"
actix-http = "^1.0.1"
actix-identity = "~0.2"
actix-session = "~0.3"
actix-web = "~2.0"
app = { path = "../app" }
db = { path = "../db" }
chrono = { version = "~0.4", features = ['serde'] }
diesel = { version = "~1.4", features = ['chrono', 'postgres', 'r2d2'] }
dotenv = "~0.15"
notifications = { path = "../notifications" }
r2d2 = "~0.8"
rust_decimal = { version = "~1.19", features = ['diesel'] }
regex = "~1.4"
serde = "~1.0"
serde_derive = "~1.0"
tera = "~1.6"
validator = "~0.12"

[dev-dependencies]
actix-rt = "~1.0"
actix-service = "~1.0"
chrono = "~0.4"
libxml = "~0.2"
mockito = "^0.29.0"
serde_json = "^1.0.61"
